2011-06-20 In Cité Solution  <technique@in-cite.net>

	* initial code generated with kickstarter