@@ -37,6 +37,23 @@ $TCA['tx_icsodappstore_logs'] = array (
 	),
 );
 
+$TCA['tx_icsodappstore_month_logs'] = array (
+	'ctrl' => array (
+		'title'     => 'LLL:EXT:ics_od_appstore/locallang_db.xml:tx_icsodappstore_month_logs',		
+		'label'     => 'application',	
+		'tstamp'    => 'tstamp',
+		'crdate'    => 'crdate',
+		'cruser_id' => 'cruser_id',
+		'default_sortby' => 'ORDER BY application',	
+		'delete' => 'deleted',	
+		'enablecolumns' => array (		
+			'disabled' => 'hidden',
+		),
+		'dynamicConfigFile' => t3lib_extMgm::extPath($_EXTKEY).'tca.php',
+		'iconfile'          => t3lib_extMgm::extRelPath($_EXTKEY).'icon_tx_icsodappstore_month_logs.gif',
+	),
+);
+
 $TCA['tx_icsodappstore_statistics'] = array (
 	'ctrl' => array (
 		'title'     => 'LLL:EXT:ics_od_appstore/locallang_db.xml:tx_icsodappstore_statistics',		
