@@ -1,3 +1,6 @@
+2012-03-22 Tsi YANG  <tsi@in-cite.net>
+	* Feature: Added scheduler task for statistics
+
 2011-06-20 In Cité Solution  <technique@in-cite.net>
 
 	* initial code generated with kickstarter
